# Veronia

./: CMakeLists.txt  diagram.json  wokwi.toml
include/: config.h  motor.h  veronia_ui.h
main/: config.h  idf_component.yml  main.c  main.cpp
src/: CMakeLists.txt  motor.cpp
src/motor/: angleencoder.cpp  angleencoder.h  as5047p_angle_test.cpp  motor.cpp  motor.h  open_loop_spin_test.cpp  pins.h  smartknob.cpp
src/ui/: veronia_ui.cpp
